[gd_scene load_steps=2 format=2]

[ext_resource path="res://AudioCreator.gd" type="Script" id=1]

[node name="AudioCreator" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.0
margin_top = -129.0
margin_right = -289.0
margin_bottom = -62.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Form" type="Node2D" parent="."]
position = Vector2( 36.3157, 30.0901 )

[node name="Index" type="LineEdit" parent="Form"]
margin_top = 21.7437
margin_right = 58.0
margin_bottom = 45.7437
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Form"]
margin_right = 40.0
margin_bottom = 14.0
text = "Name of clip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Form"]
margin_left = 185.043
margin_top = 24.1168
margin_right = 223.043
margin_bottom = 44.1168
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="Form"]
margin_left = 237.528
margin_top = 25.0798
margin_right = 275.528
margin_bottom = 45.0798
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Form"]
margin_left = 128.721
margin_top = 23.0925
margin_right = 170.721
margin_bottom = 43.0925
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="Form"]
margin_left = 72.7701
margin_top = 22.8085
margin_right = 110.77
margin_bottom = 42.8085
text = "Prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="VBoxContainer" parent="."]
margin_left = 385.816
margin_top = 48.0071
margin_right = 624.816
margin_bottom = 88.0071
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="Form/Index" to="." method="_on_Index_text_changed"]
[connection signal="pressed" from="Form/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Form/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Form/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Form/Prev" to="." method="_on_Prev_pressed"]
